# customer-data-platform

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  project_goal.md  pyproject.toml  verify_database.ipynb
.github/workflows/: ci.yml
data/: customers.db  customers1.db
docs/: de_datenbanken.md  de_design-patterns.md  de_docker.md  de_python-grundlagen.md  de_python-typsystem.md  de_testing-und-qualitaet.md  en_databases.md  en_design-patterns.md  en_docker.md  en_python-fundamentals.md  en_python-type-system.md  en_testing-and-quality.md  links.txt
src/customer_data_platform/exceptions/: extraction.py  validation.py
src/customer_data_platform/extract/: csv_extractor.py  protocols.py
src/customer_data_platform/extract/schema/: customer.py
src/customer_data_platform/load/: database.py  init_db.py
src/customer_data_platform/load/repositories/: customer_repository.py  sqlite_customer_repository.py
src/customer_data_platform/models/: clean_customer.py  raw_customer.py
src/customer_data_platform/transform/: transformer.py
src/customer_data_platform/validate/: validator.py
tests/integration/: test_pipeline.py  test_sqlite_customer_repository.py
tests/unit/extract/: test_csv_customer_extractor.py
tests/unit/transform/: test_transformer.py
tests/unit/validate/: test_validator.py
