[project]
name = "customer-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=90"
pythonpath = ["src"]
